Changed validation of sourceUrl